<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.main.MainActivity"
    android:id="@+id/main">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvStory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        tools:listitem="@layout/item_story" />

    <LinearLayout
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judulUtama"
            android:textSize="40sp"
            android:textColor="@color/dark_brown"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subJudul"
            android:textColor="@color/brown"
            android:textSize="24sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_maps"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="180dp"
        android:padding="4dp"
        app:srcCompat="@drawable/ic_maps_brown" />

    <ImageView
        android:id="@+id/iv_settings"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="216dp"
        android:padding="4dp"
        app:srcCompat="@drawable/ic_settings_brown" />

    <Button
        android:id="@+id/action_logout"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:layout_marginStart="256dp"
        android:alpha="100"
        android:backgroundTint="@color/yellow"
        android:text="@string/keluar"
        android:textSize="12sp"
        tools:alpha="100" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:backgroundTint="@color/brown"
        android:contentDescription="@string/tambah_cerita"
        android:foregroundGravity="bottom"
        app:fabSize="normal"
        app:layout_anchor="@id/rvStory"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_add_white_24" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_anchor="@id/rvStory"
        app:layout_anchorGravity="center"
        tools:visibility="visible" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>